--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -87,30 +87,6 @@
     <script>
         $(function () {
 
-// 홈 화면 추가동작 (alert)
-            $(window).on("load", function () {
-                let alertMessage = $("#globalAlertMessage").data("alertmessage");
-                let isLogout = $("#globalAlertMessage > #isLogout").data("islogout");
-
-                // console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
-
-                if (alertMessage) {
-                    if (alertMessage == "oauth2_add") {
-                        if (confirm("해당 소셜 계정으로 가입된 회원이 없습니다. 가입 하시겠습니까?")) {
-                            location.replace("/member/add-oauth");
-                        } else {
-                            location.replace("/logout");
-                        }
-                        return false;
-                    }
-
-                    alert(alertMessage);
-                    if (isLogout) {
-                        location.replace("/logout");
-                    }
-                }
-            })
-
 // 검색 클릭 (submit)
             let searchForm = $("#searchForm");
             $("#searchForm>button").on("click", function (event) {
@@ -172,6 +148,31 @@
                     location.href = $(this).attr("href");
                 }
             })
+
+// alert (+ 홈화면 추가동작)
+            $(window).on("load", function () {
+                let alertMessage = $("#globalAlertMessage").data("alertmessage");
+                let isLogout = $("#globalAlertMessage > #isLogout").data("islogout");
+
+                // console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
+
+                if (alertMessage) {
+                    if (alertMessage == "oauth2_add") {
+                        if (confirm("해당 소셜 계정으로 가입된 회원이 없습니다. 가입 하시겠습니까?")) {
+                            location.replace("/member/add-oauth");
+                        } else {
+                            location.replace("/logout");
+                        }
+                        return false;
+                    }
+
+                    alert(alertMessage);
+                    if (isLogout) {
+                        location.replace("/logout");
+                    }
+                }
+            })
+
         })
     </script>
 </head>
