--- a/src/main/resources/templates/board/editForm.html
+++ b/src/main/resources/templates/board/editForm.html
@@ -208,7 +208,7 @@
         </div>
 
         <p id="editBtWrapper">
-            <input id="editBt" type="submit" name="submit" value="수정" class="btn btn-primary">
+            <input id="editBt" type="submit" name="submit" value="수정" class="btn btn-outline-primary">
         </p>
 
         <!-- onsubmit 실제로 업로드할 이미지 요청 url 에서 uuid 뽑아서 값으로 설정 -->
