--- a/src/main/resources/templates/board/writeForm.html
+++ b/src/main/resources/templates/board/writeForm.html
@@ -226,7 +226,7 @@
         <!-- content 의 실제 글자수 -->
         <input type="hidden" name="contentLength" value="" id="contentLength">
 
-        <p id="submitBtWrapper"><input type="submit" id="submitBt" name="submit" value="등록" class="btn btn-primary"></p>
+        <p id="submitBtWrapper"><input type="submit" id="submitBt" name="submit" value="등록" class="btn btn-outline-primary"></p>
     </form>
 
 </div>
