--- a/src/main/resources/templates/member/myComment.html
+++ b/src/main/resources/templates/member/myComment.html
@@ -271,7 +271,7 @@
             </select>
             <input id="searchKeyword" type="text" th:field="*{keyword}" name="keyword" class="form-control"/>
             <input id="searchCategory" type="hidden" th:field="*{categoryCode}">
-            <button class="btn btn-primary">검색</button>
+            <button class="btn btn-outline-primary">검색</button>
         </form>
     </div>
 
