--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -176,10 +176,10 @@
         </div>
 
         <div class="d-flex justify-content-center" id="buttonBox">
-            <button type="submit" class="btn btn-primary bg-gradient"> 로그인 </button>
+            <button type="submit" class="btn btn-outline-primary bg-gradient"> 로그인 </button>
             <button onclick="location.href='list.html'"
                     th:onclick="|location.href='@{/member/add}'|"
-                    type="button" class="btn btn-primary bg-gradient"> 회원가입 </button>
+                    type="button" class="btn btn-outline-primary bg-gradient"> 회원가입 </button>
         </div>
         <div id="oAuth2LoginBox">
             <span id="oAuth2LoginHeader"> 소셜 계정으로 로그인 / 회원가입</span>
