--- a/src/main/resources/templates/member/addForm.html
+++ b/src/main/resources/templates/member/addForm.html
@@ -266,7 +266,7 @@
         <div class="input-wrapper">
             <input type="text" th:field="*{loginId}" id="loginId" th:errorclass="is-invalid"
                    placeholder="최대 16자 까지 허용합니다." class="form-control col-6">
-            <button id="duplicateLoginIdCheckBt" type="button" class="btn btn-secondary col">
+            <button id="duplicateLoginIdCheckBt" type="button" class="btn btn-outline-primary col">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 로그인 ID 입니다.</div>
@@ -284,18 +284,18 @@
         <div class="input-wrapper">
             <input type="text" th:field="*{username}" id="username" th:errorclass="is-invalid"
                    placeholder="최대 16자 까지 허용합니다." class="username form-control">
-            <button type="button" class="duplicateUsernameCheckBt btn btn-secondary">
+            <button type="button" class="duplicateUsernameCheckBt btn btn-outline-primary">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 닉네임 입니다.</div>
             <div class="invalid-feedback"> 닉네임을 입력해 주세요 (최대 16 자)</div>
         </div>
 
-        <label for="email">이메일 </label>
+        <label for="email">이메일 (인증 하지 않아도 가입 가능합니다)</label>
         <div class="input-wrapper">
             <input type="text" id="email" th:field="*{email}" th:errorclass="is-invalid"
                    placeholder="최대 30자 까지 허용합니다." class="form-control">
-            <button type="button" class="verifyEmailBtn btn btn-secondary">
+            <button type="button" class="verifyEmailBtn btn btn-outline-secondary">
                 인증
             </button>
             <div class="invalid-feedback"> 유효한 이메일을 입력해 주세요 </div>
@@ -306,7 +306,7 @@
             <div class="input-wrapper">
                 <input type="password" id="emailVerifyCode" name="emailVerifyCode"
                        placeholder="인증번호" class="form-control">
-                <button type="button" class="confirmEmailBtn btn btn-secondary">
+                <button type="button" class="confirmEmailBtn btn btn-outline-primary">
                     인증확인
                 </button>
                 <div class="invalid-feedback"> 인증 번호가 다릅니다. </div>
@@ -316,7 +316,7 @@
         <input id="isEmailVerified" type="hidden" name="emailVerified" value="false">
 
         <div class="d-flex justify-content-center">
-            <button id="submitBt" type="submit" class="btn btn-primary"> 회원가입</button>
+            <button id="submitBt" type="submit" class="btn btn-outline-primary"> 회원가입</button>
         </div>
     </form>
 
@@ -342,7 +342,7 @@
         <div class="input-wrapper">
             <input type="text" th:field="*{username}" id="oauth2Username" th:errorclass="is-invalid"
                    placeholder="최대 20자 까지 허용합니다." class="form-control username editable">
-            <button class="duplicateUsernameCheckBt btn btn-secondary" type="button">
+            <button class="duplicateUsernameCheckBt btn btn-outline-primary" type="button">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 닉네임 입니다.</div>
@@ -350,7 +350,7 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <button id="oauth2SubmitBt" type="submit" class="btn btn-primary">회원 가입</button>
+            <button id="oauth2SubmitBt" type="submit" class="btn btn-outline-primary">회원 가입</button>
         </div>
 
         <!-- Oauth2 유저인지 확인-->
