--- a/src/main/resources/templates/member/infoForm.html
+++ b/src/main/resources/templates/member/infoForm.html
@@ -335,7 +335,7 @@
         <div class="input-wrapper">
             <input type="text" th:field="*{loginId}" id="loginId" th:errorclass="is-invalid"
                    placeholder="최대 8자 까지 허용합니다." class="form-control col-6 editable">
-            <button id="duplicateLoginIdCheckBt" type="button" class="btn btn-secondary col">
+            <button id="duplicateLoginIdCheckBt" type="button" class="btn btn-outline-primary col">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 로그인 ID 입니다.</div>
@@ -354,7 +354,7 @@
         <div class="input-wrapper">
             <input type="text" th:field="*{username}" id="username" th:errorclass="is-invalid"
                    placeholder="최대 20자 까지 허용합니다." class="form-control username editable">
-            <button class="duplicateUsernameCheckBt btn btn-secondary" type="button">
+            <button class="duplicateUsernameCheckBt btn btn-outline-primary" type="button">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 닉네임 입니다.</div>
@@ -365,7 +365,7 @@
         <div class="input-wrapper">
             <input type="text" id="email" th:field="*{email}" th:errorclass="is-invalid"
                    placeholder="최대 30자 까지 허용합니다." class="form-control editable">
-            <button type="button" class="verifyEmailBtn btn btn-secondary" th:unless="*{'true'.equals(emailVerified)}">
+            <button type="button" class="verifyEmailBtn btn btn-outline-secondary" th:unless="*{'true'.equals(emailVerified)}">
                 인증
             </button>
             <div class="invalid-feedback"> 유효한 이메일을 입력해 주세요 (최대 30자) </div>
@@ -376,7 +376,7 @@
             <div class="input-wrapper">
                 <input type="password" id="emailVerifyCode" name="emailVerifyCode"
                        placeholder="인증번호" class="form-control editable">
-                <button type="button" class="confirmEmailBtn btn btn-secondary">
+                <button type="button" class="confirmEmailBtn btn btn-outline-primary">
                     인증확인
                 </button>
                 <div class="invalid-feedback"> 인증 번호가 다릅니다. </div>
@@ -384,9 +384,9 @@
         </div>
 
         <div class="d-flex justify-content-evenly">
-            <button id="editBt" type="button" class="btn btn-primary edit-btn">정보 수정</button>
-            <button id="deleteBt" type="button" class="btn btn-primary delete-btn">회원 탈퇴</button>
-            <button id="submitBt" type="submit" class="btn btn-primary submit-btn"> 회원 수정</button>
+            <button id="editBt" type="button" class="btn btn-outline-primary edit-btn">정보 수정</button>
+            <button id="deleteBt" type="button" class="btn btn-outline-primary delete-btn">회원 탈퇴</button>
+            <button id="submitBt" type="submit" class="btn btn-outline-primary submit-btn"> 회원 수정</button>
         </div>
 
         <!-- Oauth2 유저인지 확인-->
@@ -418,7 +418,7 @@
         <div class="input-wrapper">
             <input type="text" th:field="*{username}" id="oauth2Username" th:errorclass="is-invalid"
                    placeholder="최대 20자 까지 허용합니다." class="form-control username editable">
-            <button class="duplicateUsernameCheckBt btn btn-secondary" type="button">
+            <button class="duplicateUsernameCheckBt btn btn-outline-primary" type="button">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 닉네임 입니다.</div>
@@ -426,9 +426,9 @@
         </div>
 
         <div class="d-flex justify-content-evenly">
-            <button id="oauth2EditBt" type="button" class="btn btn-primary edit-btn">정보 수정</button>
-            <button id="oauth2DeleteBt" type="button" class="btn btn-primary delete-btn">회원 탈퇴</button>
-            <button id="oauth2SubmitBt" type="submit" class="btn btn-primary submit-btn"> 수정 완료</button>
+            <button id="oauth2EditBt" type="button" class="btn btn-outline-primary edit-btn">정보 수정</button>
+            <button id="oauth2DeleteBt" type="button" class="btn btn-outline-primary delete-btn">회원 탈퇴</button>
+            <button id="oauth2SubmitBt" type="submit" class="btn btn-outline-primary submit-btn"> 수정 완료</button>
         </div>
 
         <!-- Oauth2 유저인지 확인-->
